Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13017

LOCK TABLE fails with irrelevant error while working with tables affected by ANSI_QUOTES

    XMLWordPrintable

Details

    Description

      --source include/have_partition.inc
       
      SET sql_mode='ANSI_QUOTES';
       
      CREATE TABLE t1 (i INT) 
      PARTITION BY RANGE (i)
      (PARTITION flush VALUES LESS THAN MAXVALUE);
       
      CREATE TABLE t2 LIKE t1;
       
      SET @@SQL_MODE='';
      LOCK TABLES `t1` READ LOCAL,`t2` READ LOCAL;
      

      MariaDB [test]> LOCK TABLES `t1` READ LOCAL,`t2` READ LOCAL;
      ERROR 1064 (42000): You have an error in your SQL syntax; check the manual that corresponds to your MariaDB server version for the right syntax to use near '"flush" VALUES LESS THAN MAXVALUE ENGINE = InnoDB)' at line 2
      

      Reproducible both with MTR and MySQL client.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.