MDEV-13017 LOCK TABLE fails with irrelevant error while working with tables affected by ANSI_QUOTES